tests/good/json6.lens
stream when(entry) {
    print(entry.message)
}
