tests/bad/bad_json.lens
stream when(e) {
    print("foo")
}
